--- a/action.yml
+++ b/action.yml
@@ -56,7 +56,7 @@ inputs:
     default: "false"
   is_force_deletion:
     description: "[optional] set to true if you want to force delete files which are deleted within the source repository even if they contain changes"
-    default: "false"
+    default: "true"
   is_git_lfs:
     description: "[optional] set to true if you want to enable git lfs"
     default: "false"
