--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ inputs:
     description: "[optional] define the hooks as yaml string input"
   is_force_push_pr:
     description: "[optional] set to true if you want to force push and pr update"
-    default: "true"
+    default: "false"
   is_pr_cleanup:
     description: "[optional] set to true if you want to cleanup older PRs targeting the same branch."
     default: "false"
